# rust-wasm-monitor

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.sh  demo.html
docs/: ai_agent_instructions.md  research.md  usage.txt
src/: lib.rs
tools/: README.md
tools/system-monitor/: index.ts
wiki/: API-Reference.md  Architecture.md  Build-System.md  Code-First-Approach.md  Core-Components.md  Home.md  TypeScript-Integration.md
